Prevent eth_sign overflow

--- a/app/App/Panel/Main/Signer/Requests/style/index.styl
+++ b/app/App/Panel/Main/Signer/Requests/style/index.styl
@@ -641,6 +641,7 @@
       padding 20px
       min-height 100%
       box-sizing border-box
+      word-break break-all
 
   .transactionValue
     position absolute
